test/data/security/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### deny any 443 0.0.0.0/0 any 195.140.176.35 in
-A ufw-user-input -p tcp --dport 443 -s 195.140.176.35 -j DROP
-A ufw-user-input -p udp --dport 443 -s 195.140.176.35 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 195.140.176.35 in
-A ufw-user-input -p tcp --dport 80 -s 195.140.176.35 -j DROP
-A ufw-user-input -p udp --dport 80 -s 195.140.176.35 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 64.187.236.27 in
-A ufw-user-input -p tcp --dport 443 -s 64.187.236.27 -j DROP
-A ufw-user-input -p udp --dport 443 -s 64.187.236.27 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 64.187.236.27 in
-A ufw-user-input -p tcp --dport 80 -s 64.187.236.27 -j DROP
-A ufw-user-input -p udp --dport 80 -s 64.187.236.27 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 206.232.3.170 in
-A ufw-user-input -p tcp --dport 443 -s 206.232.3.170 -j DROP
-A ufw-user-input -p udp --dport 443 -s 206.232.3.170 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 206.232.3.170 in
-A ufw-user-input -p tcp --dport 80 -s 206.232.3.170 -j DROP
-A ufw-user-input -p udp --dport 80 -s 206.232.3.170 -j DROP

### tuple ### deny any 443 0.0.0.0/0 any 46.17.47.202 in
-A ufw-user-input -p tcp --dport 443 -s 46.17.47.202 -j DROP
-A ufw-user-input -p udp --dport 443 -s 46.17.47.202 -j DROP

### tuple ### deny any 80 0.0.0.0/0 any 46.17.47.202 in
-A ufw-user-input -p tcp --dport 80 -s 46.17.47.202 -j DROP
-A ufw-user-input -p udp --dport 80 -s 46.17.47.202 -j DROP

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow tcp 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
